--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,20 @@
 # --- Required options --- #
 
 # Name of website
-title: sezerb Blog
+title: Sezer Bağlan
 
 # Your name to show in the footer
-author: Sezer Baglan
+author: Sezer Bağlan
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://sezerb.github.io"
+  Blog: ""
+  Publications: "publications"
+#  Resources:
+#    - Beautiful Jekyll: "https://beautifuljekyll.com"
+#    - Learn markdown: "https://www.markdowntutorial.com/"
 
 # --- Logo --- #
 
@@ -80,7 +81,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "sezerblog.com"
+url-pretty: "sezerb.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
