--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Sezer Bağlan
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Home: "https://sezerb.github.io/" 
+  Home: "/" 
   About Me: "aboutme"
 #  Publications: "publications"
 #  Resources:
